fix: add line wrapping

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -945,6 +945,7 @@ header .container {
 .comment__text {
   width: 100%;
   margin: 0 auto;
+  white-space: break-spaces;
 }
 
 .comment_button {
